@@ -19,8 +19,12 @@ Rails::Initializer.run do |config|
   # Only load the plugins named here, by default all plugins in vendor/plugins are loaded
   # config.plugins = %W( exception_notification ssl_requirement )
 
-  # Add additional load paths (these paths will be subject to auto-loading of constants)
+  # Add additional load paths (these are searched when explicitly require something)
   # config.load_paths += %W( #{RAILS_ROOT}/extras )
+
+  # Add additional autoloading load paths
+  # (these paths will be subject to auto-loading of constants)
+  # config.autoload_paths += Dir["#{RAILS_ROOT}/models/*/"]
 
   # Force all environments to use the same logger level 
   # (by default production uses :info, the others :debug)
