@@ -1,5 +1,7 @@
 *SVN*
 
+* Update environment.rb comments to include config.autoload_paths. Closes #6478 [caio]
+
 * Update scaffold to use new form_tag block functionality.  Closes #6480. [BobSilva]
 
 * Plugin generator: check for class collisions.  #4833 [vinbarnes@gmail.com]
